# ion-cli

./: Cargo.toml
codegen-test-projects/java/: build.gradle.kts  settings.gradle.kts
codegen-test-projects/java/src/main/ion-schema/: struct_with_fields.isl
codegen-test-projects/java/src/main/java/org/example/: Foo.java
codegen-test-projects/java/src/test/java/org/example/: FooTest.java
codegen-test-projects/java/src/test/resources/: struct_with_fields.ion
codegen-test-projects/rust/: Cargo.toml  build.rs
codegen-test-projects/rust/ion_data/: struct_with_fields.ion
codegen-test-projects/rust/src/: lib.rs
ion-cli/: Cargo.toml
ion-cli-wasm/: Cargo.toml
ion-cli-wasm/src/: lib.rs
ion-cli/src/: fs_wrapper.rs  fs_wrapper_clean.rs  lib.rs  main.rs
ion-cli/src/commands/: dump.rs  mod.rs
ion-cli/src/commands/beta/: count.rs  inspect.rs  mod.rs  primitive.rs
ion-cli/src/commands/beta/schema/: load.rs  mod.rs  validate.rs
tests/: codegen-tests.rs
