[package]
name = "ion-cli-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.82"
ion-cli = { path = "../ion-cli" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"